tests/test_files/invalid/semantic/unknown_variable_in_task_output.pfdl
# SPDX-FileCopyrightText: The PFDL Contributors
# SPDX-License-Identifier: MIT

Struct Test
    attribute: string
End

Task task_1
    Service
        Out
            variable: Test
    Out
        not_a_variable # not_a_variable was never defined
End